index name has now timestamp YYYY.MM.DD at end

--- a/softflowd.8
+++ b/softflowd.8
@@ -129,7 +129,9 @@ Specify
 and
 .Ar port
 to send flow information to a elasticsearch node.
-Flow data will be saved in index softflowd.
+Flow data will be saved in index with name format
+as softflowd-YYYY.MM.DD, where YYYY.MM.DD is the
+actual date.
 Document type is softflow.
 .It Fl i Xo
 .Sm off
